adding more details to wireframe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     </head>
 
     <body>
-        <nav role="navigation">Fixed Nav</nav>
+        <nav role="navigation">
+            <ul id="nav-links">
+                <li><a href="">About</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
         <main role="main">
 
             <header role="banner">
@@ -17,6 +24,13 @@
 
             <section>
                 <h2>About Section</h2>
+                <div id="profile-deets">
+                    <img id="profile-pic" src="images/profile-pic" alt="profile picture">
+                    <p>As a polymath I have surveyed 100s of miles of river for invasive plant species, worked with some of the most innovative minds for a certificate in sustainable business and most recently finished a full stack program at Thinkful. I love that coding promotes creative and analytical thinking as well as requires continuous learning as languages and frameworks keep evolving.
+
+                    When I’m not coding you can find me immersed in nature identifying plants, brewing beer and dabbling on an uke.
+                </p>
+                </div>
             </section>
 
             <section>
