--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </header>
 
             <section>
-                <h2>About Section</h2>
+                <h2>Tell me more about Leah Borns</h2>
                 <div id="profile-deets">
                     <img id="profile-pic" src="images/profile-pic" alt="profile picture">
                     <p>As a polymath I have surveyed 100s of miles of river for invasive plant species, worked with some of the most innovative minds for a certificate in sustainable business and most recently finished a full stack program at Thinkful. I love that coding promotes creative and analytical thinking as well as requires continuous learning as languages and frameworks keep evolving.
@@ -35,10 +35,62 @@
 
             <section>
                 <h2>Skills</h2>
+                <div>html img</div>
+                <div>css img</div>
+                <div> javascript img (node, react)</div>
             </section>
 
             <section>
                 <h2>Projects</h2>
+<!--                UPBEAT ATLAS-->
+                <div id="upbeat-atlas-app">
+                    <img src="" alt="screenshot">
+                    <h3>Upbeat Atlas</h3>
+                    <div class="tech-image">
+                        <img src="" alt="html5">
+                        <img src="" alt="css">
+                        <img src="" alt="Javascript">
+                    </div>
+                    <p>Finding upcoming shows is as easy as a click of a search button but getting to a show can be a nightmare. Not only is parking impossible but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
+                    </p>
+                    <a href="https://leahborns.github.io/upbeat-atlas-artist-finder-songkick-api-capstone/index.html">Live app</a>
+                    <a href="https://github.com/LeahBorns/upbeat-atlas-artist-finder-songkick-api-capstone">Repo</a>
+                </div>
+
+<!--                SUSTAIN-->
+                <div id="sustain-app">
+                    <img src="" alt="screenshot">
+                    <h3>Sustain</h3>
+                    <div class="tech-image">
+                        <img src="" alt="html5">
+                        <img src="" alt="css">
+                        <img src="" alt="Javascript">
+                        <img src="" alt="jQuery">
+                        <img src="" alt="node">
+                    </div>
+                    <p>Sustain is the first iteration of an app that will gameify sustainability for touring musicians and their fans. The app will engage fans by having them commit to sustainable activies, document those experiences and get points for it. In the end each fan has gained points to get merchandise as a perk for participating as well as help the artist reduce their overall footprint on tour. By gameifying sustainability it can make some of these practices habitual for each 'player'.
+                    </p>
+                    <a href="https://sustain-node-capstone.herokuapp.com">Live app</a>
+                    <a href="https://github.com/LeahBorns/sustain-node-capstone">Repo</a>
+                </div>
+
+<!--         COMMUTE CALCULATOR       -->
+                <div id="commute-calculator-app">
+                    <img src="" alt="screenshot">
+                    <h3>Co<sub>2</sub>mmute Calculator</h3>
+                    <div class="tech-image">
+                        <img src="" alt="html5">
+                        <img src="" alt="css">
+                        <img src="" alt="Javascript">
+                        <img src="" alt="jQuery">
+                        <img src="" alt="node">
+                        <img src="" alt="React">
+                    </div>
+                    <p>Co2mmute calculator is a simple way for bike commuters to keep track of their milage and the positive impact they are having each time they decide to pedal vs drive. This app will show the positive impact that bike commuting can have on our communities by comparing how much co2 they divert compared to a prius, average size car and an SUV. The ability to put a number and impact on their commute may encourage them to commute more as well as others to start.
+                    </p>
+                    <a href="https://leahborns.github.io/commute-calculator-final-capstone-react/build">Live app</a>
+                    <a href="https://github.com/LeahBorns/commute-calculator-final-capstone-react">Repo</a>
+                </div>
             </section>
 
             <section>
