copy outline added to html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     </div>
                     <p>Finding upcoming shows is as easy as a click of a search button but getting to a show can be a nightmare. Not only is parking impossible but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
                     </p>
-                    <a href="https://leahborns.github.io/upbeat-atlas-artist-finder-songkick-api-capstone/index.html">Live app</a>
-                    <a href="https://github.com/LeahBorns/upbeat-atlas-artist-finder-songkick-api-capstone">Repo</a>
+                    <button><a href="https://leahborns.github.io/upbeat-atlas-artist-finder-songkick-api-capstone/index.html">Live app</a></button>
+                    <button><a href="https://github.com/LeahBorns/upbeat-atlas-artist-finder-songkick-api-capstone">Repo</a></button>
                 </div>
 
 <!--                SUSTAIN-->
@@ -70,8 +70,8 @@
                     </div>
                     <p>Sustain is the first iteration of an app that will gameify sustainability for touring musicians and their fans. The app will engage fans by having them commit to sustainable activies, document those experiences and get points for it. In the end each fan has gained points to get merchandise as a perk for participating as well as help the artist reduce their overall footprint on tour. By gameifying sustainability it can make some of these practices habitual for each 'player'.
                     </p>
-                    <a href="https://sustain-node-capstone.herokuapp.com">Live app</a>
-                    <a href="https://github.com/LeahBorns/sustain-node-capstone">Repo</a>
+                    <button><a href="https://sustain-node-capstone.herokuapp.com">Live app</a></button>
+                    <button><a href="https://github.com/LeahBorns/sustain-node-capstone">Repo</a></button>
                 </div>
 
 <!--         COMMUTE CALCULATOR       -->
@@ -88,8 +88,8 @@
                     </div>
                     <p>Co2mmute calculator is a simple way for bike commuters to keep track of their milage and the positive impact they are having each time they decide to pedal vs drive. This app will show the positive impact that bike commuting can have on our communities by comparing how much co2 they divert compared to a prius, average size car and an SUV. The ability to put a number and impact on their commute may encourage them to commute more as well as others to start.
                     </p>
-                    <a href="https://leahborns.github.io/commute-calculator-final-capstone-react/build">Live app</a>
-                    <a href="https://github.com/LeahBorns/commute-calculator-final-capstone-react">Repo</a>
+                    <button><a href="https://leahborns.github.io/commute-calculator-final-capstone-react/build">Live app</a></button>
+                    <button><a href="https://github.com/LeahBorns/commute-calculator-final-capstone-react">Repo</a></button>
                 </div>
             </section>
 
