images to skills section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <nav role="navigation">
             <ul id="nav-links">
+               <h1>LB</h1>
                 <li><a href="">About</a></li>
                 <li><a href="">Skills</a></li>
                 <li><a href="">Projects</a></li>
@@ -35,9 +36,11 @@
 
             <section>
                 <h2>Skills</h2>
-                <div>html img</div>
-                <div>css img</div>
-                <div> javascript img (node, react)</div>
+                <div id="skills-img">
+                    <img src="images/html-5.png" alt="html">
+                    <img src="images/css-3.png" alt="css img">
+                    <img src="images/javascript.png" alt="js img">
+                </div>
             </section>
 
             <section>
@@ -94,7 +97,11 @@
             </section>
 
             <section>
-                <h2>Contact</h2>
+                <h2>Let's Connect</h2>
+                <h3>971.940.2869</h3>
+                <h3>leah.borns@gmailcom</h3>
+                <img src="" alt="github img">
+                <img src="" alt="instagram img">
             </section>
 
         </main>
