--- a/index.html
+++ b/index.html
@@ -49,11 +49,36 @@
                 <h2>Projects</h2>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
+                       <div class="project-img">
+                        <img class="project-screenshot" src="images/upbeat-atlas-screenshot.png" alt="upbeat atlas screenshot">
+                    </div>
+
+                    <div class="project-info">
+                            <h3>Upbeat Atlas</h3>
+                            <div class="tech-image">
+                                <img src="images/html-5.png" alt="html5">
+                                <img src="images/css-3.png" alt="css">
+                                <img src="images/javascript.png" alt="Javascript">
+                            </div>
+
+                        <p>Finding upcoming shows is as easy as a click of a search button but getting to a show can be a nightmare. Not only is parking impossible but it puts so many cars on the road and increases carbon emissions. With Upbeat Atlas I wanted to create an easy way for event goers to locate their next show with a Google map to easily find directions along with a gentle nudge to consider taking a more sustainable way.
+                        </p>
+                    </div>
+                </div>
+                    <button class="project-links"><a target="_blank" href="https://leahborns.github.io/upbeat-atlas-artist-finder-songkick-api-capstone/index.html">Live app</a></button>
+                    <button class="project-links"><a target="_blank" href="https://github.com/LeahBorns/upbeat-atlas-artist-finder-songkick-api-capstone">Repo</a></button>
+
+
+
+
+                <div id="upbeat-atlas-app">
+                   <div class="project-title">
                     <h3>Upbeat Atlas</h3>
                     <div class="tech-image">
                         <img src="images/html-5.png" alt="html5">
                         <img src="images/css-3.png" alt="css">
                         <img src="images/javascript.png" alt="Javascript">
+                    </div>
                     </div>
                     <div class="project-info">
                     <img class="project-screenshot" src="images/upbeat-atlas-screenshot.png" alt="upbeat atlas screenshot">
@@ -110,8 +135,8 @@
                 <h2>Let's Connect</h2>
                 <h3>971.940.2869</h3>
                 <h3>leah.borns@gmailcom</h3>
-                <img src="" alt="github img">
-                <img src="" alt="instagram img">
+                <img src="images/github.png" alt="github img">
+                <img src="images/instagram.png" alt="instagram img">
             </section>
 
         </main>
