adjusting flow and editing bio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Leah Borns' mindblowing Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
     </head>
 
     <body>
@@ -29,9 +30,8 @@
                 <h2>Tell me more about Leah Borns</h2>
                 <div id="profile-deets">
                     <img id="profile-pic" src="images/profile-pic" alt="profile picture">
-                    <p>As a polymath I have surveyed 100s of miles of river for invasive plant species, worked with some of the most innovative minds for a certificate in sustainable business and most recently finished a full stack program at Thinkful. I love that coding promotes creative and analytical thinking as well as requires continuous learning as languages and frameworks keep evolving.
-
-                    When I’m not coding you can find me immersed in nature identifying plants, brewing beer and dabbling on an uke.
+                    <p>I consider myself a polymath; I've become adept at a diverse combination of skills. Along the way I have surveyed 100's of miles of river for invasive plant species; I've worked with some of the most innovative minds for a certificate in sustainable business and most recently I finished a full stack program at Thinkful. <p> Coding has been the perfect fusion of analytical and creative thinking. I love that coding promotes creative and analytical thinking as well as requires continuous learning as languages and frameworks keep evolving.</p>
+                    <p>When I’m not coding you can find me immersed in nature identifying plants, brewing beer and dabbling on my uke.
                 </p>
                 </div>
             </section>
@@ -113,11 +113,16 @@
             </section>
 
             <section id="contact-section">
-                <h2>Let's Connect</h2>
-                <h3>971.940.2869</h3>
-                <h3>leah.borns@gmailcom</h3>
-                <img src="images/github.png" alt="github img">
-                <img src="images/instagram.png" alt="instagram img">
+               <div id="contact-info">
+                    <h2>Let's Connect</h2>
+                    <p>p. 971.940.2869</p>
+                    <p>e. leah.borns@gmailcom</p>
+                </div>
+                <div id="social-img">
+                    <img src="images/github.png" alt="github img">
+                    <img src="images/instagram.png" alt="instagram img">
+                    <img src="images/linkedin.png" alt="linkedin image">
+                </div>
             </section>
 
         </main>
