making things look pretty

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
 
             <header role="banner">
                 <h1>Borns to code</h1>
+
+<!-------------------------HEADER ANIMATION      --------------------------->
+                <div class="content">
+                    <div class="content__container">
+                        <p class="content__container__text">
+                            Borns to
+                        </p>
+
+                        <ul class="content__container__list">
+                            <li class="content__container__list__item">code</li>
+                            <li class="content__container__list__item">dance</li>
+                            <li class="content__container__list__item">explore</li>
+                            <li class="content__container__list__item">learn</li>
+                        </ul>
+                    </div>
+                </div>
+<!-------------------------END HEADER ANIMATION      --------------------------->
             </header>
 
             <section id="about-me-section">
