--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav role="navigation">
 <!--           <div id="nav-info">-->
-               <div id="nav-logo">LB</div>
+               <div id="nav-logo">Leah Borns</div>
                 <ul id="nav-links">
                     <li><a href="#about-me-section">About</a></li>
                     <li><a href="#skills-section">Skills</a></li>
@@ -23,34 +23,28 @@
         <main role="main">
 
             <header role="banner">
-                <h1>Borns to code</h1>
-
-<!-------------------------HEADER ANIMATION      --------------------------->
-                <div class="content">
-                    <div class="content__container">
-                        <p class="content__container__text">
-                            Borns to
-                        </p>
-
-                        <ul class="content__container__list">
-                            <li class="content__container__list__item">code</li>
-                            <li class="content__container__list__item">dance</li>
-                            <li class="content__container__list__item">explore</li>
-                            <li class="content__container__list__item">learn</li>
-                        </ul>
-                    </div>
+              <div id="header-title">
+               <p id="header-p">The name is <br> <span>Borns</span><br>Leah Borns.
+                </p>
+                  <p class="header-description">&lt;FullStackDeveloper &#47;&gt;
+                  <p class="header-description">&lt;SustainabilityEnabler &#47;&gt;</p> <p class="header-description">&lt;FreshWaterLover &#47;&gt;</p>
                 </div>
-<!-------------------------END HEADER ANIMATION      --------------------------->
+
+
             </header>
 
             <section id="about-me-section">
-                <h2>Tell me more about Leah Borns</h2>
-                <div id="profile-deets">
+                <h2>Oh! Tell me more!</h2>
+                <div id="profile-img">
                     <img id="profile-pic" src="images/profile-pic" alt="profile picture">
-                    <p>I consider myself a polymath; I've become adept at a diverse combination of skills. Along the way I have surveyed 100's of miles of river for invasive plant species; I've worked with some of the most innovative minds for a certificate in sustainable business and most recently I finished a full stack program at Thinkful. <p> Coding has been the perfect fusion of analytical and creative thinking. I love that coding promotes creative and analytical thinking as well as requires continuous learning as languages and frameworks keep evolving.</p>
-                    <p>When I’m not coding you can find me immersed in nature identifying plants, brewing beer and dabbling on my uke.
+                </div>
+                <div id="profile-deets">
+                        <p>I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
+                        <p> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
+                        <p>When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
                 </p>
                 </div>
+
             </section>
 
             <section id="skills-section">
