updated all sections styling

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <nav role="navigation">
 <!--           <div id="nav-info">-->
-               <div id="nav-logo">Leah Borns</div>
+               <div id="nav-logo">LEAH BORNS</div>
                 <ul id="nav-links">
                     <li><a href="#about-me-section">About</a></li>
-                    <li><a href="#skills-section">Skills</a></li>
+<!--                    <li><a href="#skills-section">Skills</a></li>-->
                     <li><a href="#project-section">Projects</a></li>
                     <li><a href="#contact-section">Contact</a></li>
                 </ul>
@@ -34,30 +34,33 @@
             </header>
 
             <section id="about-me-section">
-                <h2>Oh! Tell me more!</h2>
+                <p id="am-section-header">this is Leah</p>
+                <div id="about-me-group">
+                <div id="profile-deets" class="clearfix">
+                    <p class="about-me">I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
+                    <p class="about-me"> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
+                    <p class="about-me">When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
+                </p>
+                </div>
                 <div id="profile-img">
                     <img id="profile-pic" src="images/profile-pic" alt="profile picture">
                 </div>
-                <div id="profile-deets">
-                        <p>I consider myself a bit of a polymath as I've become adept at a diverse combination of skills through a breadth of experiences. For example: I have surveyed 100's of miles of river for invasive plant species; mixed ideas with other innovative minds while pursuing a certificate in sustainable business; and most recently, I finished a full stack program at Thinkful.</p>
-                        <p> For me, coding has been the perfect fusion of analytical and creative thinking. I love that it promotes the use of both sides of my brain while requiring continuous education as languages and frameworks keep evolving.</p>
-                        <p>When I’m not coding you can find me immersed in nature identifying plants, biking, hiking, brewing beer, and strumming my uke.
-                </p>
                 </div>
-
             </section>
 
+<!-- WILL ADD SKILLS SECTION LATER
             <section id="skills-section">
-                <h2>Skills</h2>
+                <h2>SKILLS</h2>
                 <div id="skills-img">
                     <img src="images/html-5.png" alt="html">
                     <img src="images/css-3.png" alt="css img">
                     <img src="images/javascript.png" alt="js img">
                 </div>
             </section>
+-->
 
             <section id="project-section">
-                <h2>Projects</h2>
+                <p id="am-section-header">Leah made these</p>
 <!--                UPBEAT ATLAS-->
                 <div id="upbeat-atlas-app">
                        <div class="project-img">
@@ -125,7 +128,7 @@
 
             <section id="contact-section">
                <div id="contact-info">
-                    <h2>Let's Connect</h2>
+                   <p id="am-section-header">connect with Leah</p>
                     <p>p. 971.940.2869</p>
                     <p>e. leah.borns@gmailcom</p>
                 </div>
