--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
                     <p>e. leah.borns@gmailcom</p>
                 </div>
                 <div id="social-img">
-                    <img src="images/github.png" alt="github img">
-                    <img src="images/instagram.png" alt="instagram img">
-                    <img src="images/linkedin.png" alt="linkedin image">
+                    <a href="https://github.com/LeahBorns"><img target="_blank" class="social-button" src="images/social-github.png" alt="github img"></a>
+                    <a href="https://www.linkedin.com/in/leahborns/"><img class="social-button"  src="images/social-linkedin.png" alt="linkedin img"></a>
+                    <a href="https://www.instagram.com/leahborns/"><img class="social-button" src="images/social-insta.png" alt="instagram image"></a>
+                    <a href="mailto:leah.borns@gmail.com"> <img class="social-button"  src="images/social-mail.png" alt="mail image"></a>
                 </div>
             </section>
 
