socials linked to new page

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                     <p>e. leah.borns@gmailcom</p>
                 </div>
                 <div id="social-img">
-                    <a href="https://github.com/LeahBorns"><img target="_blank" class="social-button" src="images/social-github.png" alt="github img"></a>
-                    <a href="https://www.linkedin.com/in/leahborns/"><img class="social-button"  src="images/social-linkedin.png" alt="linkedin img"></a>
-                    <a href="https://www.instagram.com/leahborns/"><img class="social-button" src="images/social-insta.png" alt="instagram image"></a>
-                    <a href="mailto:leah.borns@gmail.com"> <img class="social-button"  src="images/social-mail.png" alt="mail image"></a>
+                    <a href="https://github.com/LeahBorns" target="_blank"><img  class="social-button" src="images/social-github.png" alt="github img"></a>
+                    <a href="https://www.linkedin.com/in/leahborns/" target="_blank"><img class="social-button"  src="images/social-linkedin.png" alt="linkedin img"></a>
+                    <a href="https://www.instagram.com/leahborns/" target="_blank"><img class="social-button" src="images/social-insta.png" alt="instagram image"></a>
+                    <a href="mailto:leah.borns@gmail.com" target="_blank"> <img class="social-button"  src="images/social-mail.png" alt="mail image"></a>
                 </div>
             </section>
 
