--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <body>
         <nav role="navigation">
-<!--           <div id="nav-info">-->
-               <div id="nav-logo">LEAH BORNS</div>
+           <div class="content">
+               <div id="nav-logo"><a href="#">LEAH BORNS</a></div>
                 <ul id="nav-links">
-                    <li><a href="#about-me-section">About</a></li>
+                    <li><a href="#about-me-section" class="compact">About</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
-                    <li><a href="#project-section">Projects</a></li>
-                    <li><a href="#contact-section">Contact</a></li>
+                    <li><a href="#project-section" class="compact">Projects</a></li>
+                    <li><a href="#contact-section" class="compact">Connect</a></li>
                 </ul>
-<!--            </div>-->
+            </div>
         </nav>
         <main role="main">
 
@@ -130,7 +130,7 @@
                 <p id="am-section-header">connect with Leah</p>
                <div id="contact-info">
                     <p>p. 971.940.2869</p>
-                    <p>e. leah.borns@gmailcom</p>
+                    <p>e. leah.borns@gmail.com</p>
                 </div>
                 <div id="social-img">
                     <a href="https://github.com/LeahBorns" target="_blank"><img  class="social-button" src="images/social-github.png" alt="github img"></a>
@@ -143,8 +143,9 @@
         </main>
 
             <footer role="contentinfo">
-                <div id="nav-logo">LB</div>
+                <div id="nav-logo"></div>
             </footer>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
