added collapsible navbar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <body>
         <nav role="navigation">
-           <div class="content">
+           <div class="content topnav myTopnav">
                <div id="nav-logo"><a href="#">LEAH BORNS</a></div>
                 <ul id="nav-links">
-                    <li><a href="#about-me-section" class="compact">About</a></li>
+                    <li><a href="#about-me-section">About</a></li>
 <!--                    <li><a href="#skills-section">Skills</a></li>-->
-                    <li><a href="#project-section" class="compact">Projects</a></li>
-                    <li><a href="#contact-section" class="compact">Connect</a></li>
+                    <li><a href="#project-section">Projects</a></li>
+                    <li><a href="#contact-section">Connect</a></li><li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><img src="images/nav-bar.png" alt="collapsible nav bar" class="fa fa-bars"></a></li>
                 </ul>
             </div>
         </nav>
